# GController

./: .gitignore  CMakeLists.txt  build.sh
include/: gcontroller.hpp
src/: gcontroller.cpp  main.cpp
